<?xml version="1.0"?>
<package format="3">
  <name>map_simulator</name>
  <version>2.0.0</version>
  <description>Multi-robot 2D simulation with a map-based environment</description>
  <maintainer email="olivier.kermorgant@ec-nantes.fr">Olivier Kermorgant</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>

  <depend>libopencv-dev</depend>
  <depend>geometry_msgs</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>urdf</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>yaml-cpp</depend>
  <exec_depend>ackermann_msgs</exec_depend>
  <exec_depend>four_wheel_steering_msgs</exec_depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
